--- a/gitops/apps/home-assistant/configuration/blueprints/automation/room_timer_control.yaml
+++ b/gitops/apps/home-assistant/configuration/blueprints/automation/room_timer_control.yaml
@@ -315,14 +315,9 @@ action:
         {% else %}false{% endif %}
 
   # Call the script which handles: turn on lights if off (if auto_on), apply scene to lights that are on
-  - service: "script.scheduled_light_on"
+  - service: "script.set_lighting_slot"
     data_template:
-      fallback_lights: "{{ _fb_var }}"
-      timer_mode: true
-      auto_on: "{{ slot_auto_on }}"
-      custom_schedule_enabled: "{{ custom_schedule_enabled_input if custom_schedule_enabled_input and custom_schedule_enabled_input != '' and custom_schedule_enabled_input is not none else '' }}"
-      custom_s1_start: "{{ custom_s1_start_input if custom_s1_start_input and custom_s1_start_input != '' and custom_s1_start_input is not none else '' }}"
-      custom_s2_start: "{{ custom_s2_start_input if custom_s2_start_input and custom_s2_start_input != '' and custom_s2_start_input is not none else '' }}"
-      custom_s3_start: "{{ custom_s3_start_input if custom_s3_start_input and custom_s3_start_input != '' and custom_s3_start_input is not none else '' }}"
-      custom_s4_start: "{{ custom_s4_start_input if custom_s4_start_input and custom_s4_start_input != '' and custom_s4_start_input is not none else '' }}"
+      room: "{{ room_key_var }}"
+      slot: "{{ fired_slot }}"
+      apply: true
 
