--- a/gitops/apps/home-assistant/configuration/blueprints/automation/room_switch_control.yaml
+++ b/gitops/apps/home-assistant/configuration/blueprints/automation/room_switch_control.yaml
@@ -281,7 +281,11 @@ variables:
   s4: "{{ as_timestamp(today_at(s4_str)) }}"
 
   current_slot: >-
-    {% if now_ts >= s1 and now_ts < s2 %}morning
+    {% set cal_entity = 'calendar.' ~ entity_name ~ '_lighting' %}
+    {% set cal_summary = state_attr(cal_entity, 'message') | lower if is_state(cal_entity, 'on') else '' %}
+    {% if cal_summary in ['morning', 'day', 'evening', 'night'] %}
+      {{ cal_summary }}
+    {% elif now_ts >= s1 and now_ts < s2 %}morning
     {% elif now_ts >= s2 and now_ts < s3 %}day
     {% elif now_ts >= s3 and now_ts < s4 %}evening
     {% else %}night{% endif %}
@@ -385,6 +389,7 @@ action:
             data:
               target_lights: >-
                 {{ target_lights_input.entity_id if target_lights_input.entity_id is defined else target_lights_input }}
+              forced_slot: "{{ current_slot }}"
               custom_schedule_enabled: "{{ custom_schedule_enabled }}"
               custom_s1_start: "{{ custom_s1_start }}"
               custom_s2_start: "{{ custom_s2_start }}"
@@ -396,6 +401,7 @@ action:
         sequence:
           - service: "script.scheduled_light_on"
             data:
+              forced_slot: "{{ current_slot }}"
               custom_schedule_enabled: "{{ custom_schedule_enabled_input }}"
               custom_s1_start: "{{ custom_s1_start_input }}"
               custom_s2_start: "{{ custom_s2_start_input }}"
